# django-outbox-pattern-usage

./: .env  .pre-commit-config.yaml  LICENSE  README.md  README.pt-br.md  Saga with Outbox Pattern.postman_collection.json  architecture.excalidraw  compose.yaml  manage.sh  run.sh  start.sh  stop.sh
docker/: compose.yaml
docker/kong/: compose.yaml
docker/kong/config/: kong.yaml
docker/services/order/: .env.example  compose.yaml  gunicorn.conf.py
docker/services/payment/: .env.example  Dockerfile  compose.yaml  gunicorn.conf.py
docker/services/stock/: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  gunicorn.conf.py  requirements.txt
k8s/: README.md  setup.sh
k8s/k3d/: README.md
k8s/kong/: README.md  kong-gateway.yaml  values.yaml
k8s/order/: order-config-map.yaml  order-db-deployment.yaml  order-deployment.yaml  order-http-route.yaml  order-secret.yaml  values.yaml
k8s/rabbitmq/: rabbitmq.yaml
k8s/saga/: Chart.yaml  values.yaml
k8s/saga/templates/: configmap.yaml  deployments.yaml  (+3 more)
k8s/stock/: values.yaml
kong/: compose.yaml
order/: .editorconfig  .env  .gitignore  Dockerfile  README.md  compose.yaml  gunicorn.conf.py  pyproject.toml
order/src/: __init__.py  settings.py  urls.py
order/src/apps/core/: admin.py  callback.py  models.py  serializers.py  views.py
order/src/apps/core/migrations/: 0001_initial.py
payment/: .env  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
payment/src/: settings.py  urls.py
rabbitmq/: Dockerfile
scripts/: start.sh  stop.sh
services/order/: Dockerfile  compose.yaml  pyproject.toml  requirements.txt
services/order/src/: settings.py  urls.py
services/order/src/apps/core/: models.py  serializers.py
services/order/src/core/: apps.py  models.py  serializers.py
services/payment/: .gitignore  .pre-commit-config.yaml  compose.yaml  gunicorn.conf.py  pyproject.toml
services/payment/src/: settings.py  urls.py
services/payment/src/apps/core/: callback.py  serializers.py
services/payment/src/apps/core/fixtures/: payment.json
services/payment/src/core/: callback.py  models.py
services/stock/: .env.example  Dockerfile  compose.yaml
stock/: .env  README.md  compose.yaml  gunicorn.conf.py  manage.py
stock/src/: settings.py  urls.py
web/: package-lock.json  package.json
(+34 files in other folders)
